# Ayiou

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ayiou.example.toml  config.toml  my_bot.sqlite
.cargo/: config.toml
.github/workflows/: ci.yaml  ci.yml  release.yml
ayiou/: CLAUDE.md  Cargo.toml
ayiou-adapter/: Cargo.toml
ayiou-adapter/src/: lib.rs  onebot.rs
ayiou-admin-proto/: Cargo.toml
ayiou-admin-proto/src/: lib.rs
ayiou-agent/: Cargo.toml
ayiou-agent/src/: executor.rs  in_process_runtime.rs  lib.rs
ayiou-control-plane/: Cargo.toml
ayiou-control-plane/src/: agent_session.rs  app.rs  auth.rs  bot_registry.rs  lib.rs  observability.rs  plugin_service.rs  rbac.rs  webui.rs
ayiou-control-plane/src/config_store/: mod.rs  postgres.rs  redis.rs  sqlite.rs
ayiou-control-plane/templates/: bot_detail.html  bots.html  layout.html
ayiou-control-plane/tests/: auth_rbac.rs  bot_commands.rs  config_store_contract.rs  observability_api.rs  plugin_config_hot_update.rs  webui_pages.rs
ayiou-core/src/: lib.rs
ayiou-driver/: Cargo.toml
ayiou-driver/src/: lib.rs
ayiou-macros/: CLAUDE.md  Cargo.toml
ayiou-macros/src/: args.rs  attr_plugin.rs  attrs.rs  derive_plugin.rs  lib.rs  plugin.rs
ayiou-plugin-bridge/: CLAUDE.md  Cargo.toml
ayiou-plugin-bridge/examples/: demo.rs
ayiou-plugin-bridge/src/: config.rs  lib.rs  process.rs
ayiou-protocol/: CLAUDE.md  Cargo.toml
ayiou-protocol/src/: lib.rs  rpc.rs  types.rs
ayiou-runner/: CLAUDE.md  Cargo.toml
ayiou-runner/src/: main.rs
ayiou-wasm/: Cargo.toml
ayiou-wasm-sdk/: Cargo.toml
ayiou-wasm-sdk/src/: lib.rs
ayiou-wasm/src/: backend.rs  host.rs  lib.rs  plugin.rs  types.rs
ayiou-wasm/tests/: wasm_backend.rs
ayiou-wasm/wit/: ayiou-plugin.wit
ayiou/examples/: command_demo.rs  kitchen_sink.rs  native_demo.rs  onebot_bot.rs
ayiou/fixtures/: echo_plugin.wasm
ayiou/src/: adapter.rs  advanced.rs  app.rs  bot.rs  control_plane.rs  core.rs  driver.rs  lib.rs  main.rs  prelude.rs
ayiou/src/adapter/: console.rs  mod.rs  onebot.rs
ayiou/src/adapter/console/: adapter.rs  ctx.rs  ext.rs  mod.rs  sender.rs
ayiou/src/adapter/onebot/: v11.rs
ayiou/src/adapter/onebot/v11/: adapter.rs  ctx.rs  ext.rs  model.rs  sender.rs
ayiou/src/adapter/onebot_v11/: mod.rs  model.rs
ayiou/src/core/: action.rs  adapter.rs  app.rs  command.rs  config.rs  config_store.rs  context.rs  control.rs  driver.rs  dynamic.rs  event.rs  event_bus.rs  extract.rs  handler.rs  lifecycle.rs  mod.rs  model.rs  observability.rs  plugin.rs  plugin_host.rs  plugin_runtime.rs  plugin_system.rs  remote.rs  runtime.rs  scheduler.rs  service.rs  session.rs  storage.rs  supervisor.rs  wasm.rs
ayiou/src/core/storage/: sea_orm.rs
ayiou/src/core/supervisor/: api.rs  catalog.rs  types.rs
ayiou/src/core/wasm/: host_api.rs  mod.rs  runtime.rs
ayiou/src/driver/: console.rs  mock.rs  mod.rs  wsclient.rs
ayiou/tests/: bot_store.rs  control_plane.rs  default_surface.rs  derive_plugin.rs  onebot_adapter_token.rs  onebot_sender.rs  plugin.rs  plugin_host.rs  plugin_macro.rs  sea_orm_store.rs  wsdriver_token.rs
ayiou/tests/ui/: default_no_adapter_driver.rs  default_no_adapter_driver.stderr
ayiou/webui-dist/: index.html
ayiou/webui-dist/assets/: index-DUKCH2g1.css
config/: development.yaml  test.yaml
docs/: .gitignore  CNAME  biome.json  next.config.mjs  package.json  wrangler.jsonc
docs/content/docs/: args-macro.mdx  command-system-dx.mdx  control-plane.mdx  cron-scheduling.mdx  dynamic-plugins.mdx  extractors.mdx  getting-started.mdx  index.mdx  kitchen-sink-example.mdx  meta.json  observability.mdx  plugin-macro.mdx  regex-validation.mdx  session-management.mdx  storage-session.mdx  v0-2-kernel-architecture.mdx  v1-kernel-plan.mdx  wasm-plugins.mdx
docs/plans/: 2026-03-03-webui-control-plane-design.md  2026-03-03-webui-control-plane.md  2026-05-09-driver-adapter-features-design.md  2026-05-09-driver-adapter-features.md  2026-05-09-plugin-collaboration-runtime-roadmap.md  2026-05-09-service-dependency-manifest-design.md  2026-05-09-service-dependency-manifest.md  2026-05-09-service-registry-design.md  2026-05-09-service-registry.md  2026-06-08-control-plane-hot-reload-design.md  2026-06-08-control-plane-hot-reload.md  2026-06-23-wasm-plugin-backend-plan.md
docs/src/lib/: layout.shared.tsx
examples/: external_plugin.py  onebot_bot.rs
examples/bot-with-wasm/: Cargo.toml
examples/console_bot/: Cargo.toml
examples/my_bot/: Cargo.toml
examples/my_bot/src/: main.rs  plugin.rs
examples/my_bot/src/commands/: add.rs  echo.rs  email.rs  guess.rs  help.rs  mod.rs  timer.rs  whoami.rs
examples/my_bot/wasm/: README.md
examples/my_bot/wasm/wtest_plugin_sdk/: Cargo.toml
examples/my_bot/wasm/wtest_plugin_sdk/src/: lib.rs
examples/wasm-plugin-ts/: README.md  asconfig.json  package.json
frontend/: .gitignore  package.json
migrations/: 001_init.sql
plugins/ayiou-plugin-bilibili-live/: Cargo.toml  README.md
plugins/ayiou-plugin-bilibili-live/src/: client.rs  command.rs  keys.rs  lib.rs  model.rs  plugin.rs  poller.rs  repo.rs
plugins/ayiou-plugin-bilibili-live/tests/: commands.rs  poller.rs  repo_commands.rs
plugins/ayiou-plugin-qweather/: Cargo.toml  README.md
plugins/ayiou-plugin-qweather/src/: card.rs  client.rs  lib.rs  plugin.rs  render.rs
src/: app.rs  connection.rs  error.rs  lib.rs  main.rs  prelude.rs
src/adapter/: onebot.rs
src/app/: config.rs  mod.rs
src/controllers/: auth.rs  user.rs
src/core/: adapter.rs  cron.rs  ctx.rs  driver.rs  event.rs  handler.rs  message.rs  mod.rs  plugin.rs
src/driver/: wsclient.rs
src/middleware/: auth.rs  mod.rs
src/models/: analytics.rs  link.rs  mod.rs  user.rs
src/onebot/: adapter.rs  api.rs  bot.rs  ctx.rs  mod.rs  model.rs
src/routes/: mod.rs
src/routes/api/: auth.rs  (+3 more)
src/services/: analytics.rs  auth.rs  link.rs  mod.rs  user.rs  user_link.rs
src/utils/: crypto.rs  logger.rs  mod.rs  shortener.rs
tests/requests/: auth.rs  home.rs  mod.rs  user.rs
webui/: README.md  package.json  vite.config.ts
webui/src/: App.tsx  api.ts  index.css
(+8 files in other folders)
