[workspace]

[package]
name = "ayiou"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "ayiou-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16.3" }

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
tokio = { version = "1.47.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.88" }
axum = { version = "0.8.4" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }
sea-orm = { version = "1.1.14", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4.41" }
validator = { version = "0.20.0" }
uuid = { version = "1.17.0", features = ["v4"] }
axum-extra = { version = "0.10.1", features = ["form"] }
mimalloc = "0.1.47"

[[bin]]
name = "ayiou-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.2.0" }
rstest = { version = "0.26.1" }
insta = { version = "1.43.1", features = ["redactions", "yaml", "filters"] }
