[workspace]
resolver = "3"
members = ["ayiou", "ayiou-macros"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"

# Internal crates
ayiou-macros = { path = "./ayiou-macros", version = "0.1.0" }
