[package]
name = "ayiou"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
ayiou-macros = { path = "ayiou-macros" }
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
once_cell = "1.21.3"
regex = "1"
cron = "0.15"
chrono = "0.4"
