[package]
name = "ayiou-control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
ayiou-admin-proto = { path = "../ayiou-admin-proto" }
dashmap = "6.1.0"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0.145"
tower = { version = "0.5.2", features = ["util"] }
