[package]
name = "ayiou-control-plane"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite-backend"]
sqlite-backend = ["dep:sqlx"]
redis-backend = ["dep:redis"]
postgres-backend = ["dep:sqlx"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
ayiou-admin-proto = { path = "../ayiou-admin-proto" }
dashmap = "6.1.0"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"], optional = true }
redis = { version = "0.32.7", features = ["tokio-comp"], optional = true }

[dev-dependencies]
serde_json = "1.0.145"
tower = { version = "0.5.2", features = ["util"] }
tempfile = "3.25.0"
