[package]
name = "ayiou-macros"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for the Ayiou bot framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ns2Kracy/Ayiou"
readme = "../README.md"
keywords = ["bot", "plugin", "macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full", "extra-traits"] }
