[package]
name = "ayiou-plugin-bridge"
version = "0.1.0"
edition = "2021"
description = "External plugin bridge for Ayiou - run plugins in any language"
license = "MIT"

[dependencies]
ayiou = { path = "../ayiou" }
ayiou-protocol = { path = "../ayiou-protocol" }
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "io-util", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
