[package]
name = "ayiou"
version = "0.1.0"
edition = "2024"
description = "A Rust bot framework with a single Bot runtime and unified plugin model."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ns2Kracy/Ayiou"
readme = "../README.md"
keywords = ["bot", "plugin", "onebot", "chatbot", "framework"]
categories = ["asynchronous", "network-programming"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
ayiou-macros = { path = "../ayiou-macros" }
dashmap = "6.1.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28.0"
log = "0.4"
pretty_env_logger = "0.5"
url = "2.5.7"
regex = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.25.0"
