[package]
name = "ayiou"
version = "0.1.1"
edition = "2024"
description = "A Rust bot framework with a single Bot runtime and unified plugin model."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ns2Kracy/Ayiou"
readme = "../README.md"
keywords = ["bot", "plugin", "onebot", "chatbot", "framework"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
driver-console = []
driver-wsclient = ["dep:futures-util", "dep:tokio-tungstenite", "dep:url"]
driver-mock = []
adapter-console = ["driver-console"]
adapter-onebot-v11 = ["driver-wsclient"]
control-plane = ["dep:axum", "dep:http", "dep:tower"]
embedded-webui = ["control-plane", "dep:include_dir", "dep:mime_guess"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
ayiou-macros = { version = "0.1.1", path = "../ayiou-macros" }
axum = { version = "0.8", optional = true }
dashmap = "6.1.0"
futures-util = { version = "0.3.31", optional = true }
http = { version = "1", optional = true }
include_dir = { version = "0.7", optional = true }
inventory = "0.3.21"
mime_guess = { version = "2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
log = "0.4"
pretty_env_logger = "0.5"
url = { version = "2.5.7", optional = true }
regex = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.25.0"
trybuild = "1.0"

[[test]]
name = "onebot_adapter_token"
required-features = ["adapter-onebot-v11"]

[[test]]
name = "onebot_sender"
required-features = ["adapter-onebot-v11"]

[[test]]
name = "wsdriver_token"
required-features = ["driver-wsclient"]

[[test]]
name = "control_plane"
required-features = ["control-plane"]
