[package]
name = "ayiou-plugin-bilibili-live"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
ayiou = { path = "../../ayiou" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
